// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EntryHeader > matches the snapshot 1`] = `
"<div class="entryHeader">
  <div class="centerAll preloadImage backgroundImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="title" style="display: none;"></div>
  <div class="blur"></div>
</div>
<section class="mBXL content">
  <figure class="figure">
    <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="title" style="display: none;"></div>
  </figure>
  <div class="mBAllM detailsWrapper">
    <h1>title</h1>Default slot content.
  </div>
</section>"
`;

exports[`EntryHeader > when there are three images > matches the snapshot 1`] = `
"<div class="entryHeader">
  <div class="centerAll preloadImage backgroundImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="title" style="display: none;"></div>
  <div class="blur"></div>
</div>
<section class="mBXL content">
  <figure class="figure">
    <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="title" style="display: none;"></div>
    <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image1" alt="title" style="display: none;"></div>
    <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image2" alt="title" style="display: none;"></div>
  </figure>
  <div class="mBAllM detailsWrapper">
    <h1>title</h1>Default slot content.
  </div>
</section>"
`;
